
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int UINT ;
typedef int HWND ;


 long MAKELPARAM (long,int) ;
 int SendMessage (int ,int ,int,long) ;
 scalar_t__ TCM_GETITEMRECT ;
 scalar_t__ TCM_SETITEMSIZE ;

void doWrite(HWND hWnd, long tByte,long address)
{
   SendMessage( hWnd,(UINT) TCM_SETITEMSIZE,0,MAKELPARAM(tByte - 2, 20));
   SendMessage( hWnd,(UINT) TCM_GETITEMRECT,1,address);
}
